--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 	<div class="About" id="about">
 		<h3>Philosophy</h3>
-		<p>Here at Intu-mind we think we should change the world with, science, arts, computers and all of this awesome subjects have something in common, creativity. Creativity will change the world in every way imaginable. We think that everyone should contribute in changing the world. This is out contribution.</p>
+		<p>Here at Intu-mind we think we should change the world with, science, arts, computers and all of this awesome subjects have something in common, creativity. Creativity will change the world in every way imaginable. We think that everyone should contribute in changing the world. This is our contribution.</p>
 		<br>
 		<p>We are anxious to see yours...</p>
 	</div>
