--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   		<p>Sometimes is really important how you organize your ideas, some write them down on a paper, others prefer to write them on a blog. So we thought, "why not make a wall of ideas?", a place were people can write their ideas and hopefully get them complete. 
   		A great idea can change everything keep that in mind, everything starts with just a question, a problem or a simple "want to". Wonderful inovations may be posted on this app, in it would be a honor that person with a great vision, writes them here and no where else.</p>
   		<br>
-  		<p>Our vision is a world full of creativity, we need creativity and change in the modern world. You can be part of it with your great visions. just search something and start changing it. Think, Think and Think. Then Write Write and Write.</p>
+  		<p>Our vision is a world full of creativity, we need creativity and change in the modern world. You can be part of it with your great visions. just search something and start changing it. Think, Think and Think. Change something by thinking.</p>
   	</div>
 
 	<div class="parallax parallax-container">
