--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
 		<h3>Go ahead explore the galaxy of ideas!</h3>
 		<h5>Current version: <a href="#features">1.0.0</a></h5>
 		<div class="Buttons">
-			<a class="waves-effect waves-light btn Windows"><span class="icon-windows8"></span> Windows</a>
-			<a class="waves-effect waves-light btn Mac"><span class="icon-appleinc"></span> Mac</a>
-			<a class="waves-effect waves-light btn Linux"><span class="icon-tux"></span> Linux</a>
+			<a href="https://github.com/IntuMind/Downloads/raw/master/V.1.0.0/Intu-Mind%20Setup%201.0.0.exe" class="waves-effect waves-light btn Windows"><span class="icon-windows8"></span> Windows</a>
 		</div>
 	</div>
 
